--- a/ML_load_run.ipynb
+++ b/ML_load_run.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/enrico/anaconda3/envs/py37/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_loader import WireDataset\n",
     "import torch\n",
@@ -23,7 +14,7 @@
     "from ML import Net\n",
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
-    "from torchmetrics.classification import F1Score\n"
+    "from torchmetrics.classification import F1Score, MulticlassRecall, MulticlassConfusionMatrix\n"
    ]
   },
   {
@@ -2329,22 +2320,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "56"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[batch 9, size: 20] F1 score: 0.949999988079071\n",
+      "[batch 19, size: 20] F1 score: 0.8500000238418579\n",
+      "[batch 29, size: 20] F1 score: 0.8999999761581421\n",
+      "[batch 39, size: 20] F1 score: 0.8999999761581421\n",
+      "[batch 49, size: 20] F1 score: 0.8500000238418579\n",
+      "tensor([0.7297, 0.3226, 0.9628, 0.1250, 0.8755, 0.8313])\n",
+      "tensor([[ 27,   0,   0,   0,   1,   9],\n",
+      "        [  0,  10,  19,   0,   0,   2],\n",
+      "        [  0,   1, 569,   0,   0,  21],\n",
+      "        [  0,   1,   3,   2,   7,   3],\n",
+      "        [  2,   1,  15,   5, 232,  10],\n",
+      "        [  2,   5,  19,   2,   0, 138]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n",
+      "OpenBLAS Warning : Detect OpenMP Loop and this application may hang. Please rebuild the library with USE_OPENMP=1 option.\n"
+     ]
     }
    ],
    "source": [
-    "len(dl_test)"
+    "\n",
+    "mcr = MulticlassRecall(num_classes=6, average=None)\n",
+    "mccm = MulticlassConfusionMatrix(num_classes=6)\n",
+    "\n",
+    "net.eval()\n",
+    "out = None\n",
+    "lab = None\n",
+    "f1_list = np.zeros(len(dl_test))\n",
+    "running_loss = 0.0\n",
+    "for i, data in enumerate(dl_test, 0):\n",
+    "    inputs, labels = data\n",
+    "    # forward + backward + optimize\n",
+    "    outputs = net(inputs)\n",
+    "\n",
+    "\n",
+    "    if out is None:\n",
+    "        out = outputs.detach()\n",
+    "    else:\n",
+    "        out = np.vstack((out, outputs.detach()))\n",
+    "\n",
+    "    if lab is None:\n",
+    "        lab = labels.detach()\n",
+    "    else:\n",
+    "        lab = np.hstack((lab, labels.detach()))\n",
+    "    f1_list[i] = F1(outputs, labels).item()\n",
+    "    if i % 10 == 9:    # print every 10 mini-batches\n",
+    "        print(f\"[batch {i}, size: {dl_test.batch_size}] F1 score: {f1_list[i]}\")\n",
+    "\n",
+    "print(mcr(torch.Tensor(out), torch.Tensor(lab)))\n",
+    "print(mccm(torch.Tensor(out), torch.Tensor(lab)))"
    ]
   }
  ],
