--- a/ML_load_run.ipynb
+++ b/ML_load_run.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries and modules\n",
     "from data_loader import WireDataset\n",
     "import torch\n",
     "import math\n",
@@ -25,9 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the dataset from a CSV file\n",
     "dataset = WireDataset(\"Input_Data_07_25.csv\")\n",
-    "# TODO add to device\n",
     "\n",
+    "# Check if CUDA is available and set the device accordingly\n",
     "if torch.cuda.is_available():\n",
     "    device = \"cuda\"\n",
     "else:\n",
@@ -40,22 +42,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the random seed for reproducibility\n",
     "generator = torch.Generator().manual_seed(4)\n",
     "\n",
+    "# Split the dataset into training and testing sets\n",
     "train_fraction = math.floor(len(dataset)*0.7)\n",
     "test_fraction = len(dataset) - train_fraction\n",
-    "\n",
     "test_data_ind, train_data_ind = torch.utils.data.random_split(dataset, [test_fraction, train_fraction], generator = generator)\n",
     "\n",
-    "dl_train = DataLoader(train_data_ind, batch_size=20, shuffle=True) #todevice\n",
-    "dl_test = DataLoader(test_data_ind, batch_size=20, shuffle=True) #todevice\n",
+    "# Create data loaders for the training and testing sets\n",
+    "dl_train = DataLoader(train_data_ind, batch_size=20, shuffle=True)\n",
+    "dl_test = DataLoader(test_data_ind, batch_size=20, shuffle=True)\n",
     "\n",
-    "net = Net() #todevice\n",
-    "#optimizer = torch.optim.SGD(net.parameters(), lr=0.0001)\n",
+    "# Initialize the neural network model\n",
+    "net = Net()\n",
     "\n",
+    "# Define the loss function and optimizer\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
     "\n",
+    "# Set the number of training epochs\n",
     "num_epochs = 100"
    ]
   },
@@ -65,6 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize arrays to store the statistics for each epoch\n",
     "epochs_stats = np.zeros((3, 100))\n",
     "F1= F1Score(\"multiclass\", num_classes = 6)\n",
     "f1_max = 0"
@@ -76,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Train the model\n",
     "for epoch in range(num_epochs):  # loop over the dataset multiple times\n",
     "    epoch_loss = []\n",
     "    running_loss = 0.0\n",
@@ -100,6 +108,7 @@
     "            print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / 10:.3f}')\n",
     "            running_loss = 0.0\n",
     "    \n",
+    "    # Evaluate the model on the testing set\n",
     "    predictions_list = [] #list for predictions (predicted number of label)\n",
     "    values_list = []      #list for values (actual number of label)\n",
     "    f1_list = np.zeros(len(dl_test))\n",
@@ -113,11 +122,13 @@
     "        if i % 10 == 9:    # print every 10 mini-batches\n",
     "            print(f\"[batch {i}, size: {dl_test.batch_size}] F1 score: {f1_list[i]}\")\n",
     "    \n",
+    "    # Compute the mean and standard deviation of the F1 scores and the mean loss for the epoch\n",
     "    epoch_loss = np.array(epoch_loss, dtype=\"float\")\n",
     "    epochs_stats[0][epoch] = f1_list.mean()\n",
     "    epochs_stats[1][epoch] = f1_list.std()\n",
     "    epochs_stats[2][epoch] = epoch_loss.mean()\n",
     "    \n",
+    "    # Save the model if it has the highest F1 score so far\n",
     "    if epochs_stats[0][epoch] > f1_max:\n",
     "        torch.save(net.state_dict(), \"model.ebr\")\n",
     "        f1_max=epochs_stats[0][epoch]"
@@ -129,12 +140,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Print the training statistics\n",
     "print('Finished Training')\n",
     "stats_column_names = [\"F1\", \"F1 Standard Deviation\", \"Loss\"]\n",
     "train_stats = pd.DataFrame(epochs_stats, index=stats_column_names)\n",
     "train_stats.to_csv(\"Train_statistics.csv\", encoding=\"-utf8\", index=False)\n",
     "ind = np.where(epochs_stats[0]==epochs_stats[0].max())\n",
     "print(f\"Maximum F1: {epochs_stats[0].max()} standard deviation: {epochs_stats[1][ind]}, Minimum Loss: {epochs_stats[2].min()}\")\n",
+    "\n",
+    "# Plot the F1 scores and losses for each epoch\n",
     "df = pd.read_csv(\"Train_statistics.csv\")\n",
     "xs = []\n",
     "for i in range(100):\n",
@@ -163,10 +177,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Compute the multiclass recall and confusion matrix\n",
     "mcr = MulticlassRecall(num_classes=6, average=None)\n",
     "mccm = MulticlassConfusionMatrix(num_classes=6)\n",
     "\n",
+    "# Evaluate the model on the testing set\n",
     "net.eval()\n",
     "out = None\n",
     "lab = None\n",
@@ -191,6 +206,7 @@
     "    if i % 10 == 9:    # print every 10 mini-batches\n",
     "        print(f\"[batch {i}, size: {dl_test.batch_size}] F1 score: {f1_list[i]}\")\n",
     "\n",
+    "# Print the multiclass recall and confusion matrix\n",
     "print(mcr(torch.Tensor(out), torch.Tensor(lab)))\n",
     "print(mccm(torch.Tensor(out), torch.Tensor(lab)))"
    ]
@@ -206,6 +222,7 @@
     "#import pandas as pd\n",
     "#import seaborn as sb\n",
     "\n",
+    "# Plot the confusion matrix\n",
     "class_full_names = [\"Parassitic\", \"Wire Parallel Defect\", \"Wire Parallel Perfect\", \"Wire Tilted Defect\", \"Wire Tilted Perfect\", \"Null\",]\n",
     "class_names = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\"]\n",
     "\n",
